update3: add layout

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -25,8 +25,8 @@
                 app:srcCompat="@drawable/logo"
                 tools:srcCompat="@drawable/logo" />
 
-            <TextView
-                android:id="@+id/textView5"
+            <EditText
+                android:id="@+id/edt_username"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@drawable/edittext_background"
@@ -39,8 +39,8 @@
                 android:hint="User name"
                 android:text="" />
 
-            <TextView
-                android:id="@+id/textView6"
+            <EditText
+                android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@drawable/edittext_background"
