update4: Ãá»sÆửa sÆữa lÃỗi thiÃếu file

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,18 +19,21 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/test_item1"
+            tools:srcCompat="@drawable/test_item1" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/test_item2"
+            tools:srcCompat="@drawable/test_item2" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/test_item3"
+            tools:srcCompat="@drawable/test_item3" />
     </ViewFlipper>
 
 
