--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@drawable/home"
+        android:title="Home"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/nav_scan"
+        android:icon="@drawable/scan"
+        android:title="Scan"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/nav_storage"
+        android:icon="@drawable/storage"
+        android:title="Storage"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/nav_user"
+        android:icon="@drawable/user"
+        android:title="User"
+        app:showAsAction="ifRoom"/>
 </menu>
