--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/milktea"
     android:orientation="vertical"
-    tools:context=".UserFragment">
+    tools:context=".UserActivity">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -218,21 +218,8 @@
             tools:srcCompat="?attr/actionModeCloseDrawable" />
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
 
-    </FrameLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/milktea"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu">
 
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </LinearLayout>
