--- a/app/src/main/res/drawable/background_recylerview_storage.xml
+++ b/app/src/main/res/drawable/background_recylerview_storage.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
+
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/brown"/>
+            <corners android:topRightRadius="20dp" android:topLeftRadius="20dp"/>
+            <stroke android:width="2dp"/>
+        </shape>
+    </item>
 </selector>
