--- a/app/src/main/res/layout/item_storage.xml
+++ b/app/src/main/res/layout/item_storage.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical">
 
@@ -22,14 +22,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="20dp"
-            app:cardElevation="0dp">
+            app:cardElevation="4dp">
             <ImageView
                 android:id="@+id/item_img"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-
                 android:scaleType="centerCrop"
-                android:background="@drawable/background_image_item_storage"
+
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
 
